syntax = "proto3";

package io.pipeline.search.engine;

option java_multiple_files = true;
option java_package = "io.pipeline.stream.engine";
option java_outer_classname = "EngineServiceProto";

import "pipeline_core_types.proto"; // This should define io.pipeline.search.model.PipeDoc

// Engine-level process status
enum ProcessStatus {
  UNKNOWN = 0;
  ACCEPTED = 1;
  ERROR = 2;
}

// Response for engine processing operations
message PipeStreamResponse {
  string stream_id = 1;
  ProcessStatus status = 2;
  string message = 3;
  string request_id = 4;
  int64 timestamp = 5;
}

// PipeStreamEngine service orchestrates pipeline execution.
service PipeStreamEngine {
  // --- Existing RPCs (can be kept for specific internal/advanced use cases or deprecated over time) ---
  // --- NOTE: a sink has the same signature - the engine controls the outgoing routing, if it's a sink implementation then that will be noted in the step
  rpc testPipeStream(io.pipeline.search.model.PipeStream) returns (io.pipeline.search.model.PipeStream);
  rpc processPipeAsync(io.pipeline.search.model.PipeStream) returns (PipeStreamResponse);
  rpc processPipeStream(stream io.pipeline.search.model.PipeStream) returns (stream PipeStreamResponse);
}